--- a/main.css
+++ b/main.css
@@ -195,6 +195,39 @@ hr {
 .mt-40 {
   margin-top: 40px; }
 
+.ml-30 {
+  margin-left: 30px; }
+
+.my-40 {
+  margin: 40px 0; }
+
+.secondary-btn {
+  border: 0;
+  outline: 0;
+  font-size: 18px;
+  line-height: 18px;
+  cursor: pointer;
+  color: #434343;
+  background-color: transparent; }
+  @media screen and (max-width: 500px) {
+    .secondary-btn {
+      font-size: 16px; } }
+
+.primary-btn {
+  border: 0;
+  outline: 0;
+  font-size: 18px;
+  line-height: 18px;
+  cursor: pointer;
+  background-color: #7f83ff;
+  color: #ffffff;
+  padding: 12px 20px 12px 22px;
+  border-radius: 20px; }
+  @media screen and (max-width: 500px) {
+    .primary-btn {
+      margin-left: 20px;
+      padding: 10px 15px; } }
+
 .top__header {
   position: fixed;
   width: 100%;
@@ -216,23 +249,11 @@ hr {
       width: 100px;
       height: 28px; } }
 
-.header__nav-item {
-  font-size: 18px;
-  color: #434343;
-  line-height: 18px; }
+.header__item-last {
+  margin-left: 53px; }
   @media screen and (max-width: 500px) {
-    .header__nav-item {
-      font-size: 16px; } }
-  .header__nav-item--active {
-    background-color: #7f83ff;
-    color: #ffffff;
-    padding: 12px 20px 12px 22px;
-    border-radius: 20px;
-    margin-left: 53px; }
-    @media screen and (max-width: 500px) {
-      .header__nav-item--active {
-        margin-left: 20px;
-        padding: 10px 15px; } }
+    .header__item-last {
+      margin-left: 20px; } }
 
 .hero {
   background-image: url(assets/img/hero.png);
@@ -823,37 +844,98 @@ hr {
       margin-right: 4px; } }
 
 .signup-area {
-  padding: 50px; }
+  padding: 50px;
+  color: #2f2d2d;
+  border-radius: 20px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 70%;
+  height: 90%;
+  z-index: 15;
+  background-color: #ffffff;
+  overflow: auto; }
+  @media screen and (max-width: 500px) {
+    .signup-area {
+      border-radius: unset;
+      width: 100%;
+      height: 100%; } }
 
 .signup__heading {
   color: #2f2d2d;
   font-size: 26px;
   text-align: center; }
+  @media screen and (max-width: 500px) {
+    .signup__heading {
+      font-size: 22px; } }
 
 .signup-warp {
   margin-top: 50px;
   font-size: 0; }
+  @media screen and (max-width: 780px) {
+    .signup-warp {
+      margin-top: 30px; } }
 
 .signup__input-holder {
   width: calc(100% / 2);
-  display: inline-block;
   padding: 0 20px; }
+  @media screen and (max-width: 780px) {
+    .signup__input-holder {
+      width: 100%;
+      padding: 0;
+      margin-top: 25px; } }
 
 .signup__input-field {
-  font-size: 20px;
-  color: #2f2d2d; }
+  font-size: 20px; }
 
 .signup__input-area {
-  margin-top: 10px;
+  padding-top: 10px;
   width: 100%;
   height: 30px;
   border: 0;
   outline: 0;
   border-bottom: 1.5px solid #a4a4a44d;
   font-size: 20px; }
+  @media screen and (max-width: 500px) {
+    .signup__input-area {
+      font-size: 18px; } }
   .signup__input-area:focus-within {
     border-color: #7f83ff; }
 
-.signup__termsnandcondiction {
+.signup__terms-condiction {
   font-size: 14px;
   padding-left: 20px; }
+  @media screen and (max-width: 780px) {
+    .signup__terms-condiction {
+      padding: 0; } }
+
+.terms-conditions__color {
+  color: #7f83ff; }
+
+.signup-btn__holder {
+  text-align: right; }
+  @media screen and (max-width: 500px) {
+    .signup-btn__holder {
+      text-align: center; } }
+
+.signup__foot-decs {
+  font-size: 18px;
+  text-align: center;
+  margin-top: 30px; }
+
+.signup-close {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  font-size: 26px; }
+
+.overlay {
+  position: fixed;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(3px);
+  z-index: 10; }
+
+.hidden {
+  display: none; }
