--- a/sass/abscracts/_mixins.scss
+++ b/sass/abscracts/_mixins.scss
@@ -1,3 +1,10 @@
+@mixin button() {
+  border: 0;
+  outline: 0;
+  font-size: font-size(fs-18);
+  line-height: map-get($line-height, lh-18);
+  cursor: pointer;
+}
 @mixin desc() {
   margin-top: 30px;
   color: $primary-text-color;
