--- a/sass/app.scss
+++ b/sass/app.scss
@@ -8,6 +8,9 @@
 @import "base/typography";
 @import "base/helper-class";
 
+// Components
+@import "components/button";
+
 // Section files
 @import "sections/navigation";
 @import "sections/hero";
