--- a/sass/sections/_signup.scss
+++ b/sass/sections/_signup.scss
@@ -1,19 +1,50 @@
 .signup-area {
   padding: 50px;
+  color: $primary-text-color;
+  // box-shadow: 0px 0px 10px $color-primary-violet;
+  border-radius: 20px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 70%;
+  height: 90%;
+  z-index: 15;
+  background-color: $secondary-text-color;
+  overflow: auto;
+
+  @include breakpoint(small-screen) {
+    border-radius: unset;
+    width: 100%;
+    height: 100%;
+  }
 }
 .signup__heading {
   color: $primary-text-color;
   font-size: font-size(fs-26);
   text-align: center;
+
+  @include breakpoint(small-screen) {
+    font-size: font-size(fs-22);
+  }
 }
 .signup-warp {
   margin-top: 50px;
   font-size: 0;
+
+  @include breakpoint(medium-small-screen) {
+    margin-top: 30px;
+  }
 }
 .signup__input-holder {
   width: calc(100% / 2);
-  display: inline-block;
   padding: 0 20px;
+
+  @include breakpoint(medium-small-screen) {
+    width: 100%;
+    padding: 0;
+    margin-top: 25px;
+  }
 
   //   & :focus-within .signup__input-area {
   //     border-bottom: 1px solid rgb(255, 0, 234);
@@ -21,10 +52,10 @@
 }
 .signup__input-field {
   font-size: font-size(fs-20);
-  color: $primary-text-color;
+  // color: $primary-text-color;
 }
 .signup__input-area {
-  margin-top: 10px;
+  padding-top: 10px;
   width: 100%;
   height: 30px;
   border: 0;
@@ -32,11 +63,54 @@
   border-bottom: 1.5px solid $color-opacity-primary-silver;
   font-size: font-size(fs-20);
 
+  @include breakpoint(small-screen) {
+    font-size: font-size(fs-18);
+  }
+
   &:focus-within {
     border-color: $color-primary-violet;
   }
 }
-.signup__termsnandcondiction {
+.signup__terms-condiction {
   font-size: font-size(fs-14);
   padding-left: 20px;
+
+  @include breakpoint(medium-small-screen) {
+    padding: 0;
+  }
+}
+.terms-conditions__color {
+  color: $color-primary-violet;
+}
+.signup-btn__holder {
+  text-align: right;
+
+  @include breakpoint(small-screen) {
+    text-align: center;
+  }
+}
+.signup__foot-decs {
+  font-size: font-size(fs-18);
+  text-align: center;
+  margin-top: 30px;
+}
+.signup-close {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  font-size: font-size(fs-26);
+}
+// .make-blur {
+//   filter: blur(3px);
+// }
+
+.overlay {
+  position: fixed;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(3px);
+  z-index: 10;
+}
+.hidden {
+  display: none;
 }
