--- a/sass/abscracts/_variables.scss
+++ b/sass/abscracts/_variables.scss
@@ -1,6 +1,8 @@
 // COLORS
 $primary-text-color: #2f2d2d;
 $secondary-text-color: #ffffff;
+$color-primary-red: #ff0000;
+$color-tertiary-green: #008000;
 $color-primary-violet: #7f83ff;
 $color-secondary-black: #434343;
 $color-tertiary-violet: #4a4edd;
@@ -13,6 +15,7 @@ $color-medium-opacity-primary-orange: #ff865b80; //opacity 0.5
 $color-primary-orange: #fd5e5e;
 $color-opacity-primary-green: #49a65233; //opacity 0.2
 $color-primary-green: #49a652;
+
 //conflower-blue
 $color-secondary-orange: #ff865b;
 $color-opacity-primary-pink: #fb148833;
