--- a/main.css
+++ b/main.css
@@ -879,12 +879,36 @@ hr {
 
 .signup__input-holder {
   width: calc(100% / 2);
-  padding: 0 20px; }
+  padding: 0 20px;
+  font-size: 14px;
+  position: relative; }
   @media screen and (max-width: 780px) {
     .signup__input-holder {
       width: 100%;
       padding: 0;
       margin-top: 25px; } }
+  .signup__input-holder > span {
+    visibility: hidden;
+    position: absolute;
+    right: 25px;
+    bottom: 22px; }
+  .signup__input-holder.success input {
+    border-color: #49a652; }
+  .signup__input-holder.success .success-icon {
+    color: #49a652;
+    visibility: visible; }
+  .signup__input-holder.error input {
+    border-color: #df0142; }
+  .signup__input-holder.error .error-icon {
+    color: #df0142;
+    visibility: visible; }
+  .signup__input-holder.error .er-msg {
+    visibility: visible; }
+
+.er-msg {
+  visibility: hidden;
+  padding-top: 5px;
+  color: #df0142; }
 
 .signup__input-field {
   font-size: 20px; }
@@ -896,10 +920,7 @@ hr {
   border: 0;
   outline: 0;
   border-bottom: 1.5px solid #a4a4a44d;
-  font-size: 20px; }
-  @media screen and (max-width: 500px) {
-    .signup__input-area {
-      font-size: 18px; } }
+  font-size: 16px; }
   .signup__input-area:focus-within {
     border-color: #7f83ff; }
 
