--- a/sass/sections/_signup.scss
+++ b/sass/sections/_signup.scss
@@ -32,7 +32,7 @@
   margin-top: 50px;
   font-size: 0;
 
-  @include breakpoint(medium-small-screen) {
+  @include breakpoint(signup-medium-small-screen) {
     margin-top: 30px;
   }
 }
@@ -42,7 +42,7 @@
   font-size: font-size(fs-14);
   position: relative;
 
-  @include breakpoint(medium-small-screen) {
+  @include breakpoint(signup-medium-small-screen) {
     width: 100%;
     padding: 0;
     margin-top: 25px;
@@ -53,23 +53,23 @@
     right: 25px;
     bottom: 22px;
   }
-  &.success input {
-    border-color: $color-primary-green;
-  }
-  &.success .success-icon {
-    color: $color-primary-green;
-    visibility: visible;
-  }
-  &.error input {
-    border-color: $color-primary-red;
-  }
-  &.error .error-icon {
-    color: $color-primary-red;
-    visibility: visible;
-  }
-  &.error .er-msg {
-    visibility: visible;
-  }
+}
+.success input {
+  border-color: $color-primary-green;
+}
+.success .success-icon {
+  color: $color-primary-green;
+  visibility: visible;
+}
+.error input {
+  border-color: $color-primary-red;
+}
+.error .error-icon {
+  color: $color-primary-red;
+  visibility: visible;
+}
+.error .er-msg {
+  visibility: visible;
 }
 
 .er-msg {
@@ -101,7 +101,7 @@
   font-size: font-size(fs-14);
   padding-left: 20px;
 
-  @include breakpoint(medium-small-screen) {
+  @include breakpoint(signup-medium-small-screen) {
     padding: 0;
   }
 }
