--- a/sass/abscracts/_variables.scss
+++ b/sass/abscracts/_variables.scss
@@ -3,6 +3,7 @@ $primary-text-color: #2f2d2d;
 $secondary-text-color: #ffffff;
 $color-primary-red: #ff0000;
 $color-tertiary-green: #008000;
+$color-opacity-primary-black: #00000099;
 $color-primary-violet: #7f83ff;
 $color-secondary-black: #434343;
 $color-tertiary-violet: #4a4edd;
