--- a/main.css
+++ b/main.css
@@ -228,6 +228,9 @@ hr {
       margin-left: 20px;
       padding: 10px 15px; } }
 
+.disable-btn {
+  opacity: 0.5; }
+
 .top__header {
   position: fixed;
   width: 100%;
@@ -881,7 +884,8 @@ hr {
   width: calc(100% / 2);
   padding: 0 20px;
   font-size: 14px;
-  position: relative; }
+  position: relative;
+  margin-top: 30px; }
   @media screen and (max-width: 886px) {
     .signup__input-holder {
       width: 100%;
@@ -931,7 +935,8 @@ hr {
 
 .signup__terms-condiction {
   font-size: 14px;
-  padding-left: 20px; }
+  padding-left: 20px;
+  margin-top: 40px; }
   @media screen and (max-width: 886px) {
     .signup__terms-condiction {
       padding: 0; } }
@@ -940,10 +945,14 @@ hr {
   color: #7f83ff; }
 
 .signup-btn__holder {
-  text-align: right; }
+  text-align: right;
+  margin: 40px 0; }
   @media screen and (max-width: 500px) {
     .signup-btn__holder {
       text-align: center; } }
+
+.form__submit-btn {
+  margin-left: 30px; }
 
 .signup__foot-decs {
   font-size: 18px;
@@ -959,7 +968,7 @@ hr {
 .overlay {
   position: fixed;
   inset: 0;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: #00000099;
   backdrop-filter: blur(3px);
   z-index: 10; }
 
