--- a/sass/sections/_signup.scss
+++ b/sass/sections/_signup.scss
@@ -41,6 +41,7 @@
   padding: 0 20px;
   font-size: font-size(fs-14);
   position: relative;
+  margin-top: 30px;
 
   @include breakpoint(signup-medium-small-screen) {
     width: 100%;
@@ -100,6 +101,7 @@
 .signup__terms-condiction {
   font-size: font-size(fs-14);
   padding-left: 20px;
+  margin-top: 40px;
 
   @include breakpoint(signup-medium-small-screen) {
     padding: 0;
@@ -110,10 +112,14 @@
 }
 .signup-btn__holder {
   text-align: right;
+  margin: 40px 0;
 
   @include breakpoint(small-screen) {
     text-align: center;
   }
+}
+.form__submit-btn {
+  margin-left: 30px;
 }
 .signup__foot-decs {
   font-size: font-size(fs-18);
@@ -133,7 +139,7 @@
 .overlay {
   position: fixed;
   inset: 0;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: $color-opacity-primary-black;
   backdrop-filter: blur(3px);
   z-index: 10;
 }
